test/invalid/KeywordsCapitalLetterClass/KeywordsCapitalLetterClass.plume
/**
 * Keyword com letra maiuscula: class
 *
 * @author 37059, Rita Henriques
 * @version $Id: KeywordsCapitalLetterClass.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 Class KeywordsCapitalLetterClass extends Object is

  method main : () -> String is
		"Hello".toString()